Have to use .() to force bind because we're not in an Angular function

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="hero-unit">
   <h1>Soundgroups</h1>
-  <div id="username">{{username}}</div>
+  <div id="username">Hello {{username}}!</div>
   <div id="description">{{userDesc}}</div>
 </div>
 
